test/langtools/tools/javac/valhalla/value-objects/ValueAnnotationTest.out
ValueAnnotationTest.java:10:50: compiler.err.cant.inherit.from.final: ValueAnnotationTest.X
ValueAnnotationTest.java:11:28: compiler.err.cant.inherit.from.final: ValueAnnotationTest.Y
2 errors
